--- a/admin/index.html
+++ b/admin/index.html
@@ -102,10 +102,10 @@
                             <div class="btn-group">
                                 <button type="button" class="btn btn-primary white mr-1 dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="fa fa-plus-circle"></i>Adicionar</button>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item font-small-3" href="#">Reserva</a>
-                                    <a class="dropdown-item font-small-3" href="#">Cliente</a>
+                                    <a class="dropdown-item font-small-3" href="add-reserva.html">Reserva</a>
+                                    <a class="dropdown-item font-small-3" href="add-cliente.html">Cliente</a>
                                     <a class="dropdown-item font-small-3" href="add-profissional.html">Profissional</a>
-                                    <a class="dropdown-item font-small-3" href="#">Serviço</a>
+                                    <a class="dropdown-item font-small-3" href="add-servico.html">Serviço</a>
                                 </div>
                             </div>
                         </li>
@@ -131,10 +131,20 @@
     <div class="main-menu menu-fixed menu-light menu-accordion shadow pt-1" data-scroll-to-active="true">
         <div class="main-menu-content">
             <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-                <li class="nav-item open"><a href="index.html"><i class="fa fa-tachometer"></i><span class="menu-title">Painel Inicial</span></a></li>
-                <li class="nav-item"><a href="#"><i class="fa fa-calendar"></i><span class="menu-title">Agenda</span></a></li>
-                <li class="nav-item"><a href="#"><i class="fa fa-list-alt"></i><span class="menu-title">Reservas</span></a></li>
-                <li class="nav-item"><a href="#"><i class="fa fa-address-book-o"></i><span class="menu-title">Clientes</span></a></li>
+                <li class="nav-item"><a href="index.html"><i class="fa fa-tachometer"></i><span class="menu-title">Painel Inicial</span></a></li>
+                <li class="nav-item"><a href="calendario.html"><i class="fa fa-calendar"></i><span class="menu-title">Agenda</span></a></li>
+                <li class="nav-item"><a href="#"><i class="fa fa-list-alt"></i><span class="menu-title">Reservas</span></a>
+                    <ul class="menu-content">
+                        <li><a class="menu-item" href="listar-reserva.html">Listar Reservas</a></li>
+                        <li><a class="menu-item" href="add-reserva.html">Nova Reserva</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a href="#"><i class="fa fa-address-book-o"></i><span class="menu-title">Clientes</span></a>
+                    <ul class="menu-content">
+                        <li><a class="menu-item" href="listar-cliente.html">Listar Clientes</a></li>
+                        <li><a class="menu-item" href="add-cliente.html">Novo Cliente</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item"><a href="#"><i class="fa fa-pencil-square-o"></i><span class="menu-title">Gerenciar</span></a>                    
                     <ul class="menu-content">
                         <li><a class="menu-item" href="empresa.html">Empresa</a></li>
