--- a/admin/add-cliente.html
+++ b/admin/add-cliente.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/vendors.min.css">
     <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/forms/toggle/switchery.min.css">
     <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/forms/selects/select2.min.css">
+    <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/animate/animate.css">
+    <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/extensions/sweetalert2.min.css"> 
     <!-- END: Vendor CSS-->
 
     <!-- BEGIN: Theme CSS-->
@@ -103,10 +105,11 @@
                             <div class="btn-group">
                                 <button type="button" class="btn btn-primary white mr-1 dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="fa fa-plus-circle"></i>Adicionar</button>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item font-small-3" href="add-reserva.html">Reserva</a>
-                                    <a class="dropdown-item font-small-3" href="add-cliente.html">Cliente</a>
-                                    <a class="dropdown-item font-small-3" href="add-profissional.html">Profissional</a>
-                                    <a class="dropdown-item font-small-3" href="add-servico.html">Serviço</a>
+                                    <a class="dropdown-item font-small-3 pt-1 pb-1" href="add-reserva.html">Reserva</a>
+                                    <a class="dropdown-item font-small-3 pt-1 pb-1" href="add-cliente.html">Cliente</a>
+                                    <a class="dropdown-item font-small-3 pt-1 pb-1" href="add-profissional.html">Profissional</a>
+                                    <a class="dropdown-item font-small-3 pt-1 pb-1" href="add-servico.html">Serviço</a>
+                                    <a class="dropdown-item font-small-3 pt-1 pb-1" href="add-servico.html">Loja</a>
                                 </div>
                             </div>
                         </li>
@@ -148,7 +151,13 @@
                 </li>
                 <li class="nav-item"><a href="#"><i class="fa fa-pencil-square-o"></i><span class="menu-title">Gerenciar</span></a>                    
                     <ul class="menu-content">
-                        <li><a class="menu-item" href="empresa.html">Empresa</a></li>
+                        <li><a class="menu-item" href="#">Empresa</a>
+                            <ul class="menu-content">
+                                <li><a class="menu-item" href="empresa.html">Principal</a></li>
+                                <li><a class="menu-item" href="listar-loja.html">Listar Lojas</a></li>
+                                <li><a class="menu-item" href="add-loja.html">Nova Loja</a></li>
+                            </ul>
+                        </li>
                         <li><a class="menu-item" href="#">Equipe</a>
                             <ul class="menu-content">
                                 <li><a class="menu-item" href="listar-profissional.html">Listar Profissionais</a></li>
@@ -190,19 +199,25 @@
                                     <form accept="#">
                                         <div class="form-body">
                                             <div class="row">
-                                                <div class="col-md-4">
+                                                <div class="col-md-3">
                                                     <div class="form-group">
-                                                        <label for="basicInput">Nome completo</label>
-                                                        <input type="text" class="form-control" placeholder="Empresa Modelo">
+                                                        <label for="basicInput">Nome</label>
+                                                        <input type="text" class="form-control" placeholder="João Paulo">
                                                     </div>
                                                 </div>
-                                                <div class="col-md-4">
+                                                <div class="col-md-3">
+                                                    <div class="form-group">
+                                                        <label for="basicInput">Sobrenome</label>
+                                                        <input type="text" class="form-control" placeholder="dos Santos">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-3">
                                                     <div class="form-group">
                                                         <label for="basicInput">E-mail</label>
                                                         <input type="email" class="form-control" placeholder="contato@email.com.br">
                                                     </div>
                                                 </div>
-                                                <div class="col-md-4">
+                                                <div class="col-md-3">
                                                     <div class="form-group">
                                                         <label for="basicInput">Telefone</label>
                                                         <input type="phone" class="form-control" placeholder="(99) 9999-9999">
@@ -255,6 +270,35 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <div class="form-group">
+                                                        <label for="basicInput">Serviços de interesse do cliente</label>
+                                                        <select class="select2 form-control" multiple="multiple" id="id_h5_multi">
+                                                            <optgroup label="Beleza e Estética">
+                                                                <option value="">Salão de Beleza</option>
+                                                                <option value="">Manicure e Pedicure</option>
+                                                                <option value="">Salão de Sobrancelhas</option>
+                                                            </optgroup>
+                                                            <optgroup label="Saúde">
+                                                                <option value="">Clínico Geral</option>
+                                                                <option value="">Clínica Ortopédica</option>
+                                                                <option value="">Destista</option>
+                                                            </optgroup>
+                                                            <optgroup label="Autos">
+                                                                <option value="">Mecânica Geral</option>
+                                                                <option value="">Pneus e Borracharia</option>
+                                                                <option value="">Alinhamento e Balanceamento</option>
+                                                            </optgroup>
+                                                            <optgroup label="Aulas">
+                                                                <option value="">Aulas de Idiomas</option>
+                                                                <option value="">Aulas de Yoga</option>
+                                                                <option value="">Personal Trainer</option>
+                                                            </optgroup>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
                                             
                                         </div>
                                     </form>
@@ -267,7 +311,7 @@
 
                 <div class="row mt-2">
                     <div class="col-12">
-                        <button type="button" class="btn btn-success shadow">Cadastrar cliente</button>
+                        <button type="button" class="btn btn-success shadow cadastro-cliente">Cadastrar cliente</button>
                     </div>
                 </div>
                 
@@ -295,6 +339,8 @@
     <script src="../app-assets/vendors/js/forms/toggle/bootstrap-checkbox.min.js"></script>
     <script src="../app-assets/vendors/js/forms/toggle/switchery.min.js"></script>  
     <script src="../app-assets/vendors/js/forms/select/select2.full.min.js"></script>  
+    <script src="../app-assets/vendors/js/extensions/sweetalert2.all.min.js"></script>
+    <script src="../app-assets/vendors/js/extensions/polyfill.min.js"></script>
     <!-- END: Page Vendor JS-->
 
     <!-- BEGIN: Theme JS-->
@@ -305,6 +351,7 @@
     <!-- BEGIN: Page JS-->
     <script src="../app-assets/js/scripts/forms/switch.js"></script>
     <script src="../app-assets/js/scripts/forms/select/form-select2.js"></script>
+    <script src="../app-assets/js/scripts/extensions/sweet-alerts.js"></script>
     <!-- END: Page JS-->
 
 </body>
