--- a/admin/empresa.html
+++ b/admin/empresa.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/vendors.min.css">
     <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/forms/toggle/switchery.min.css">
     <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/forms/selects/select2.min.css">
+    <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/animate/animate.css">
+    <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/extensions/sweetalert2.min.css">     
     <!-- END: Vendor CSS-->
 
     <!-- BEGIN: Theme CSS-->
@@ -103,10 +105,11 @@
                             <div class="btn-group">
                                 <button type="button" class="btn btn-primary white mr-1 dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="fa fa-plus-circle"></i>Adicionar</button>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item font-small-3" href="add-reserva.html">Reserva</a>
-                                    <a class="dropdown-item font-small-3" href="add-cliente.html">Cliente</a>
-                                    <a class="dropdown-item font-small-3" href="add-profissional.html">Profissional</a>
-                                    <a class="dropdown-item font-small-3" href="add-servico.html">Serviço</a>
+                                    <a class="dropdown-item font-small-3 pt-1 pb-1" href="add-reserva.html">Reserva</a>
+                                    <a class="dropdown-item font-small-3 pt-1 pb-1" href="add-cliente.html">Cliente</a>
+                                    <a class="dropdown-item font-small-3 pt-1 pb-1" href="add-profissional.html">Profissional</a>
+                                    <a class="dropdown-item font-small-3 pt-1 pb-1" href="add-servico.html">Serviço</a>
+                                    <a class="dropdown-item font-small-3 pt-1 pb-1" href="add-servico.html">Loja</a>
                                 </div>
                             </div>
                         </li>
@@ -148,7 +151,13 @@
                 </li>
                 <li class="nav-item"><a href="#"><i class="fa fa-pencil-square-o"></i><span class="menu-title">Gerenciar</span></a>                    
                     <ul class="menu-content">
-                        <li class="active"><a class="menu-item" href="empresa.html">Empresa</a></li>
+                        <li><a class="menu-item" href="#">Empresa</a>
+                            <ul class="menu-content open">
+                                <li class="active"><a class="menu-item" href="empresa.html">Principal</a></li>
+                                <li><a class="menu-item" href="listar-loja.html">Listar Lojas</a></li>
+                                <li><a class="menu-item" href="add-loja.html">Nova Loja</a></li>
+                            </ul>
+                        </li>
                         <li><a class="menu-item" href="#">Equipe</a>
                             <ul class="menu-content">
                                 <li><a class="menu-item" href="listar-profissional.html">Listar Profissionais</a></li>
@@ -186,7 +195,7 @@
                         <div class="card border-top-3 border-top-primary mb-0">
                             <div class="card-content">
                                 <div class="card-body p-1">
-                                    <label class="h5 font-weight-bolder mb-2">Informações da empresa</label>
+                                    <label class="h5 font-weight-bolder mb-2">Informações da empresa principal</label>
                                     <form accept="#">
                                         <div class="form-body">
                                             <div class="row">
@@ -295,6 +304,18 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <fieldset class="form-group">
+                                                        <label for="basicInputFile">Enviar logotipo</label>
+                                                        <div class="custom-file">
+                                                            <input type="file" class="custom-file-input" id="inputGroupFile01">
+                                                            <label class="custom-file-label" for="inputGroupFile01"></label>
+                                                        </div>
+                                                    </fieldset>
+                                                </div>
+                                            </div>
                                             <div class="row">
                                                 <div class="col-12">
                                                     <fieldset>
@@ -318,7 +339,7 @@
                                     <label class="h5 font-weight-bolder mb-2">Horário de funcionamento</label>
                                     <form accept="#">
                                         <div class="form-body table-responsive">
-                                            <table class="table table-hover ps-container ps-theme-default table-horario-empresa">
+                                            <table class="table table-striped ps-container ps-theme-default table-horario-empresa">
                                                 <thead>
                                                     <tr>
                                                         <th></th>
@@ -425,7 +446,9 @@
     <!-- BEGIN: Page Vendor JS-->
     <script src="../app-assets/vendors/js/forms/toggle/bootstrap-checkbox.min.js"></script>
     <script src="../app-assets/vendors/js/forms/toggle/switchery.min.js"></script>  
-    <script src="../app-assets/vendors/js/forms/select/select2.full.min.js"></script>  
+    <script src="../app-assets/vendors/js/forms/select/select2.full.min.js"></script>
+    <script src="../app-assets/vendors/js/extensions/sweetalert2.all.min.js"></script>
+    <script src="../app-assets/vendors/js/extensions/polyfill.min.js"></script>
     <!-- END: Page Vendor JS-->
 
     <!-- BEGIN: Theme JS-->
@@ -436,6 +459,7 @@
     <!-- BEGIN: Page JS-->
     <script src="../app-assets/js/scripts/forms/switch.js"></script>
     <script src="../app-assets/js/scripts/forms/select/form-select2.js"></script>
+    <script src="../app-assets/js/scripts/extensions/sweet-alerts.js"></script>
     <!-- END: Page JS-->
 
 </body>
