--- a/admin/listar-cliente.html
+++ b/admin/listar-cliente.html
@@ -221,37 +221,37 @@
                                             <tr>
                                                 <td>Elizabeth Farias</td>
                                                 <td>Corte Feminino, Pé e Mão</td>
-                                                <td><a href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
-                                                <td><a href="tel:01139990099">(11) 3999-0099</a></td> 
-                                                <td><a href="edit-cliente.html" class="btn btn-icon btn-pure primary" title="Editar Cliente"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a class="text-dark" href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
+                                                <td><a class="text-dark" href="tel:01139990099">(11) 3999-0099</a></td> 
+                                                <td><a href="edit-cliente.html" class="btn btn-icon btn-pure dark" title="Editar Cliente"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Cliente"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Thais Araujo</td>
                                                 <td>Corte Feminino, Pé e Mão</td>
-                                                <td><a href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
-                                                <td><a href="tel:01139990099">(11) 3999-0099</a></td> 
-                                                <td><a href="edit-cliente.html" class="btn btn-icon btn-pure primary" title="Editar Cliente"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a class="text-dark" href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
+                                                <td><a class="text-dark" href="tel:01139990099">(11) 3999-0099</a></td> 
+                                                <td><a href="edit-cliente.html" class="btn btn-icon btn-pure dark" title="Editar Cliente"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Cliente"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Elias Maluco</td>
                                                 <td>Corte Masculino, Barba</td>
-                                                <td><a href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
-                                                <td><a href="tel:01139990099">(11) 3999-0099</a></td> 
-                                                <td><a href="edit-cliente.html" class="btn btn-icon btn-pure primary" title="Editar Cliente"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a class="text-dark" href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
+                                                <td><a class="text-dark" href="tel:01139990099">(11) 3999-0099</a></td> 
+                                                <td><a href="edit-cliente.html" class="btn btn-icon btn-pure dark" title="Editar Cliente"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Cliente"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Cássia Kiss</td>
                                                 <td>Corte Feminino, Pé e Mão</td>
-                                                <td><a href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
-                                                <td><a href="tel:01139990099">(11) 3999-0099</a></td> 
-                                                <td><a href="edit-cliente.html" class="btn btn-icon btn-pure primary" title="Editar Cliente"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a class="text-dark" href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
+                                                <td><a class="text-dark" href="tel:01139990099">(11) 3999-0099</a></td> 
+                                                <td><a href="edit-cliente.html" class="btn btn-icon btn-pure dark" title="Editar Cliente"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Cliente"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Paulinho da Viola</td>
                                                 <td>Corte Masculino</td>
-                                                <td><a href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
-                                                <td><a href="tel:01139990099">(11) 3999-0099</a></td> 
-                                                <td><a href="edit-cliente.html" class="btn btn-icon btn-pure primary" title="Editar Cliente"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a class="text-dark" href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
+                                                <td><a class="text-dark" href="tel:01139990099">(11) 3999-0099</a></td> 
+                                                <td><a href="edit-cliente.html" class="btn btn-icon btn-pure dark" title="Editar Cliente"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Cliente"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                         </tbody>
                                     </table>
