--- a/admin/listar-loja.html
+++ b/admin/listar-loja.html
@@ -216,7 +216,6 @@
                                                 <th>Telefone</th>
                                                 <th>Endereço</th>
                                                 <th>Cidade</th>
-                                                <th>Estado</th>
                                                 <th>Editar</th>
                                             </tr>
                                         </thead>
@@ -228,8 +227,7 @@
                                                 <td><a href="tel:01139990099">(11) 3999-0099</a></td>
                                                 <td>Rua Padre Jose Natuzzi, 342</td>
                                                 <td>São Paulo</td>
-                                                <td>SP</td>
-                                                <td><a href="edit-loja.html" class="btn btn-icon btn-pure primary" title="Editar loja"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a href="edit-loja.html" class="btn btn-icon btn-pure dark" title="Editar loja"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Loja"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Nome da loja 02</td>
@@ -238,8 +236,7 @@
                                                 <td><a href="tel:01139990099">(11) 3999-0099</a></td>
                                                 <td>Rua Padre Jose Natuzzi, 342</td>
                                                 <td>São Paulo</td>
-                                                <td>SP</td>
-                                                <td><a href="edit-loja.html" class="btn btn-icon btn-pure primary" title="Editar loja"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a href="edit-loja.html" class="btn btn-icon btn-pure dark" title="Editar loja"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Loja"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Nome da loja 03</td>
@@ -248,8 +245,7 @@
                                                 <td><a href="tel:01139990099">(11) 3999-0099</a></td>
                                                 <td>Rua Padre Jose Natuzzi, 342</td>
                                                 <td>São Paulo</td>
-                                                <td>SP</td>
-                                                <td><a href="edit-loja.html" class="btn btn-icon btn-pure primary" title="Editar loja"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a href="edit-loja.html" class="btn btn-icon btn-pure dark" title="Editar loja"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Loja"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                         </tbody>
                                     </table>
