--- a/admin/listar-profissional.html
+++ b/admin/listar-profissional.html
@@ -214,9 +214,6 @@
                                                 <th>Serviços</th>
                                                 <th>E-mail</th>
                                                 <th>Telefone</th>
-                                                <th>Endereço</th>
-                                                <th>Cidade</th>
-                                                <th>Estado</th>
                                                 <th>Editar</th>
                                             </tr>
                                         </thead>
@@ -224,52 +221,37 @@
                                             <tr>
                                                 <td>Joana Prado</td>
                                                 <td>Corte Feminino, Pé e Mão</td>
-                                                <td><a href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
-                                                <td><a href="tel:01139990099">(11) 3999-0099</a></td> 
-                                                <td>Rua Padre Jose Natuzzi, 342</td>
-                                                <td>São Paulo</td>
-                                                <td>SP</td>
-                                                <td><a href="edit-profissional.html" class="btn btn-icon btn-pure primary" title="Editar Profissional"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a class="text-dark" href="mailto:contato@loja.com.br">joana.prado@loja.com.br</a></td>
+                                                <td><a class="text-dark" href="tel:01139990099">(11) 3999-0099</a></td> 
+                                                <td><a href="edit-profissional.html" class="btn btn-icon btn-pure dark" title="Editar Profissional"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Profissional"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Marisa Montes</td>
                                                 <td>Corte Feminino, Pé e Mão</td>
-                                                <td><a href="mailto:contato@loja.com.br">marisa.montes@loja.com.br</a></td>
-                                                <td><a href="tel:01139990099">(11) 3999-0099</a></td> 
-                                                <td>Rua Padre Jose Natuzzi, 342</td>
-                                                <td>São Paulo</td>
-                                                <td>SP</td>
-                                                <td><a href="edit-profissional.html" class="btn btn-icon btn-pure primary" title="Editar Profissional"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a class="text-dark" href="mailto:contato@loja.com.br">marisa.montes@loja.com.br</a></td>
+                                                <td><a class="text-dark" href="tel:01139990099">(11) 3999-0099</a></td> 
+                                                <td><a href="edit-profissional.html" class="btn btn-icon btn-pure dark" title="Editar Profissional"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Profissional"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Sena do Alan</td>
                                                 <td>Corte Masculino, Barba</td>
-                                                <td><a href="mailto:contato@loja.com.br">sena.alan@loja.com.br</a></td>
-                                                <td><a href="tel:01139990099">(11) 3999-0099</a></td> 
-                                                <td>Rua Padre Jose Natuzzi, 342</td>
-                                                <td>São Paulo</td>
-                                                <td>SP</td>
-                                                <td><a href="edit-profissional.html" class="btn btn-icon btn-pure primary" title="Editar Profissional"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a class="text-dark" href="mailto:contato@loja.com.br">sena.alan@loja.com.br</a></td>
+                                                <td><a class="text-dark" href="tel:01139990099">(11) 3999-0099</a></td> 
+                                                <td><a href="edit-profissional.html" class="btn btn-icon btn-pure dark" title="Editar Profissional"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Profissional"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Marcia Miranda</td>
                                                 <td>Corte Feminino, Pé e Mão</td>
-                                                <td><a href="mailto:contato@loja.com.br">marcia.miranda@loja.com.br</a></td>
-                                                <td><a href="tel:01139990099">(11) 3999-0099</a></td> 
-                                                <td>Rua Padre Jose Natuzzi, 342</td>
-                                                <td>São Paulo</td>
-                                                <td>SP</td>
-                                                <td><a href="edit-profissional.html" class="btn btn-icon btn-pure primary" title="Editar Profissional"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a class="text-dark" href="mailto:contato@loja.com.br">marcia.miranda@loja.com.br</a></td>
+                                                <td><a class="text-dark" href="tel:01139990099">(11) 3999-0099</a></td> 
+                                                <td><a href="edit-profissional.html" class="btn btn-icon btn-pure dark" title="Editar Profissional"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Profissional"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Helio Fonseca</td>
                                                 <td>Corte Masculino, Barba</td>
-                                                <td><a href="mailto:contato@loja.com.br">helio.fonseca@loja.com.br</a></td>
-                                                <td><a href="tel:01139990099">(11) 3999-0099</a></td> 
-                                                <td>Rua Padre Jose Natuzzi, 342</td>
-                                                <td>São Paulo</td>
-                                                <td>SP</td>
-                                                <td><a href="edit-profissional.html" class="btn btn-icon btn-pure primary" title="Editar Profissional"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a class="text-dark" href="mailto:contato@loja.com.br">helio.fonseca@loja.com.br</a></td>
+                                                <td><a class="text-dark" href="tel:01139990099">(11) 3999-0099</a></td> 
+                                                <td><a href="edit-profissional.html" class="btn btn-icon btn-pure dark" title="Editar Profissional"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Profissional"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                         </tbody>
                                     </table>
