--- a/admin/listar-servico.html
+++ b/admin/listar-servico.html
@@ -223,35 +223,35 @@
                                                 <td>00:30</td>
                                                 <td>Maculino</td>
                                                 <td>Sena do Alan, Helio Fonseca</td>
-                                                <td><a href="edit-servico.html" class="btn btn-icon btn-pure primary" title="Editar Serviço"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a href="edit-servico.html" class="btn btn-icon btn-pure dark" title="Editar Serviço"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Serviço"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Corte Infantil</td>
                                                 <td>00:45</td>
                                                 <td>Infantil</td>
                                                 <td>Sena do Alan</td>
-                                                <td><a href="edit-servico.html" class="btn btn-icon btn-pure primary" title="Editar Serviço"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a href="edit-servico.html" class="btn btn-icon btn-pure dark" title="Editar Serviço"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Serviço"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Corte Feminino</td>
                                                 <td>01:00</td>
                                                 <td>Feminino</td>
                                                 <td>Marisa Montes, Marcia Miranda</td>
-                                                <td><a href="edit-servico.html" class="btn btn-icon btn-pure primary" title="Editar Serviço"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a href="edit-servico.html" class="btn btn-icon btn-pure dark" title="Editar Serviço"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Serviço"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Pé e Mão</td>
                                                 <td>00:30</td>
                                                 <td>Feminino</td>
                                                 <td>Joana Prado, Marisa Montes, Marcia Miranda</td>
-                                                <td><a href="edit-servico.html" class="btn btn-icon btn-pure primary" title="Editar Serviço"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a href="edit-servico.html" class="btn btn-icon btn-pure dark" title="Editar Serviço"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Serviço"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <td>Barba</td>
                                                 <td>00:30</td>
                                                 <td>Maculino</td>
                                                 <td>Sena do Alan, Helio Fonseca</td>
-                                                <td><a href="edit-servico.html" class="btn btn-icon btn-pure primary" title="Editar Serviço"><i class="fa fa-pencil-square-o"></i></a></td>
+                                                <td><a href="edit-servico.html" class="btn btn-icon btn-pure dark" title="Editar Serviço"><i class="fa fa-pencil-square-o"></i></a><a href="#" class="btn btn-icon btn-pure danger" title="Excluir Serviço"><i class="fa fa-times"></i></a></td>
                                             </tr>
                                         </tbody>
                                     </table>
